--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js" defer></script>
 
-    <title>Document</title>
+    <title>Christmas background</title>
 </head>
 <body>
     <canvas id="snowCanvas"></canvas>
